# scheduling-bridge

./: .bazelrc  .dockerignore  .envrc  .gitignore  AGENTS.md  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  flake.nix  justfile  llms.txt  mkdocs.yml  modal-app.py  package.json  pnpm-lock.yaml  tinyland.repo.json  vitest.config.ts
.github/workflows/: ci.yml  deploy-modal.yml  docker-ghcr.yml  publish.yml
bench/: .gitignore  README.md  k6-load-10k.js  k6-load-1k.js  k6-protocol.test.ts  k6-smoke.js  run.sh
docs/: architecture.md  blog-post.mdx  build-and-release.md  consumers.md  index.md  paper.md  runtime-contract.md
docs/design/: flow-dag-formalization.md  parity-evidence.md
docs/evidence/2026-07-03-drift-gate/: README.md  drift-red-through-real-gate.txt  suite-green.txt
docs/paper/: ase-2026-abstract.md
parity/: README.md  check.test.ts  check.ts
scripts/: bazel-helpers.mjs  build-derived-artifacts.mjs  cache-attachment-contract.sh  check-release-metadata.mjs  docker-boot-smoke.sh  generate-doc-surfaces.mjs
src/: index.ts
src/adapters/acuity/: flow-pack.ts  flow-steps.ts  flows.ts  payment-gate.ts  scraper.ts  selector-registry.ts  selectors.ts  service-resolver.ts  wizard-calendar.ts  wizard.ts
src/adapters/acuity/__tests__/: flow-pack.test.ts  flow-pii-conformance.test.ts  flow-plans.test.ts  flow-steps.test.ts  payment-gate.test.ts  wizard-calendar.test.ts
src/adapters/acuity/steps/: bypass-payment.ts  fill-form.ts  index.ts  navigate.test.ts  navigate.ts  payment-segment.ts  read-availability.ts  read-slots.ts  read-via-url.test.ts  read-via-url.ts
src/adapters/acuity/steps/__tests__/: payment-segment.test.ts
src/adapters/calcom/: errors.ts  flow-pack.ts  flow-steps.ts  flows.ts  http-client.ts  r-channel-proof.ts  selector-registry.ts  slots-api.ts  station-detector.ts
src/adapters/calcom/__tests__/: flow-pack.test.ts  flow-plans.test.ts  flow-r-channel.test.ts  flow-steps.test.ts  slots-api.test.ts
src/adapters/calcom/__tests__/__fixtures__/: error-shape.json  slots-data-direct.json  slots-day.json  slots-month.json
src/async/: config.test.ts  config.ts  postgres-store.ts  queue-stats.ts  redis-store.test.ts  redis-store.ts  store.test.ts  store.ts  types.ts  worker.test.ts  worker.ts
src/core/: types.ts
src/flow/: date-matcher.ts  field-matcher.ts  index.ts  journal-config.ts  journal.ts  mermaid.ts  postgres-journal.ts  redaction.ts  run.ts  step.ts  vendor.ts
src/flow/__tests__/: date-matcher.test.ts  field-matcher.test.ts  flow-source-fences.test.ts  fuzzy.test.ts  helpers.ts  journal-config.test.ts  journal-purge.test.ts  mermaid.test.ts  redaction.test.ts  run-metrics.test.ts  run.test.ts
src/server/: config.ts  date-prewarm.test.ts  date-prewarm.ts  flow-runner.ts  handler.ts  health.ts  http.ts  ready.ts  runtime.ts  slot-prewarm.test.ts  slot-prewarm.ts  stores.ts  validation.ts  worker.ts
src/server/__tests__/: async-endpoints.test.ts  availability-dates-cache.test.ts  availability-slots-cache.test.ts  booking-create-with-payment.test.ts  flow-resume.test.ts  flow-runner.test.ts  handler.test.ts  internal-flow-mermaid.test.ts  internal-flow-plan.test.ts  internal-flows.test.ts  trace-conformance.test.ts
src/server/__tests__/__fixtures__/trace-golden/: bypass-not-proven-coupon.json  extract-failure.json  fill-form-failure.json  happy-booking.json  happy-dates-via-url.json  happy-dates-wizard.json  happy-slots-via-url.json  happy-slots-wizard.json  navigate-failure.json  rest-guard.json  retry-booking.json  retry-dates.json  submit-failure.json
src/server/__tests__/__fixtures__/trace-golden-drifted/: happy-booking.json
src/shared/: async-client.ts  bridge-read-cache.test.ts  bridge-read-cache.ts  browser-service.test.ts  browser-service.ts  flow-shadow-metrics.test.ts  flow-step-metrics.test.ts  metrics.test.ts  metrics.ts  redis-l2.ts  remote-adapter.ts
src/shared/__tests__/: remote-adapter.test.ts  soft-hold-contract.test.ts
tests/: health.test.ts
