"""
BUILD.bazel for @tummycrypt/scheduling-bridge.

Backend-agnostic scheduling adapter hub. Bazel owns the publishable artifact.
  Local materialization: pnpm build
  Bazel artifact:        bazel build //:pkg

Architecture:
  //:core               - Re-exported types from scheduling-kit
  //:server             - HTTP server (auth, health, routing)
  //:acuity_adapter     - Acuity Playwright adapter (wizard steps, selectors, BUSINESS extraction)
  //:scraper            - Read-only BUSINESS object extraction
  (future) //:calcom_adapter
  (future) //:glossgenius_adapter
"""

load("@aspect_bazel_lib//lib:copy_directory.bzl", "copy_directory")
load("@aspect_rules_js//npm:defs.bzl", "npm_link_package", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@tummycrypt_scheduling_bridge_npm//:defs.bzl", "npm_link_all_packages")
load("@tummycrypt_scheduling_bridge_npm//:vitest/package_json.bzl", vitest_bin = "bin")

# =============================================================================
# npm link
# =============================================================================

npm_link_all_packages(name = "node_modules")

# scheduling-kit is consumed from the Bzlmod module graph (bazel_dep in
# MODULE.bazel, served by tinyland-inc/bazel-registry), not from npm.
# The link label is byte-identical to what npm_link_all_packages used to
# produce, so downstream deps/data entries are unchanged.
npm_link_package(
    name = "node_modules/@tummycrypt/scheduling-kit",
    src = "@tummycrypt_scheduling_kit//:pkg",
)

# =============================================================================
# Core types (re-exports from scheduling-kit)
# =============================================================================

ts_project(
    name = "core",
    srcs = glob(["src/core/**/*.ts"]),
    declaration = True,
    tsconfig = ":tsconfig.json",
    transpiler = "tsc",
    validate = False,
    deps = [
        ":node_modules",
        ":node_modules/@tummycrypt/scheduling-kit",
    ],
    visibility = ["//visibility:public"],
)

# =============================================================================
# Acuity adapter - Playwright wizard automation
#
# This is the first backend adapter. Future adapters (CalCom, GlossGenius)
# follow the same pattern: ts_project with deps on :core.
# =============================================================================

ts_project(
    name = "acuity_adapter",
    srcs = glob(
        ["src/adapters/**/*.ts"],
        exclude = [
            "src/adapters/acuity/__tests__/**",
            "src/adapters/acuity/steps/__tests__/**",
            "src/adapters/calcom/__tests__/**",
        ],
    ),
    declaration = True,
    tsconfig = ":tsconfig.json",
    transpiler = "tsc",
    validate = False,
    deps = [
        ":core",
        ":shared",
        ":node_modules",
        ":node_modules/effect",
        ":node_modules/playwright-core",
        ":node_modules/@tummycrypt/scheduling-kit",
    ],
    visibility = ["//visibility:public"],
)

# =============================================================================
# HTTP server (endpoints, auth, health checks)
# =============================================================================

ts_project(
    name = "shared",
    srcs = glob(["src/shared/**/*.ts"]),
    declaration = True,
    tsconfig = ":tsconfig.json",
    transpiler = "tsc",
    validate = False,
    deps = [
        ":core",
        ":node_modules",
        ":node_modules/effect",
        ":node_modules/playwright-core",
    ],
    visibility = ["//visibility:public"],
)

ts_project(
    name = "server",
    srcs = [
        "src/server/handler.ts",
        "src/server/worker.ts",
        "src/server.ts",
    ],
    declaration = True,
    tsconfig = ":tsconfig.json",
    transpiler = "tsc",
    validate = False,
    deps = [
        ":core",
        ":acuity_adapter",
        ":shared",
        ":node_modules",
        ":node_modules/effect",
        ":node_modules/pg",
        ":node_modules/@types/pg",
        ":node_modules/@tummycrypt/scheduling-kit",
    ],
    visibility = ["//visibility:public"],
)

# =============================================================================
# Full library build (all targets combined)
# =============================================================================

ts_project(
    name = "scheduling_bridge",
    srcs = glob(
        ["src/**/*.ts"],
        exclude = [
            "src/**/*.test.ts",
            "src/**/__tests__/**",
        ],
    ),
    declaration = True,
    tsconfig = ":tsconfig.json",
    transpiler = "tsc",
    out_dir = "dist",
    root_dir = "src",
    validate = False,
    deps = [
        ":node_modules",
        ":node_modules/effect",
        ":node_modules/playwright-core",
        ":node_modules/pg",
        ":node_modules/@types/pg",
        ":node_modules/@tummycrypt/scheduling-kit",
    ],
    visibility = ["//visibility:public"],
)

# =============================================================================
# npm package - publishable artifact
# =============================================================================

npm_package(
    name = "pkg",
    srcs = [
        "package.json",
        "README.md",
        "LICENSE",
        ":scheduling_bridge",
    ],
    package = "@tummycrypt/scheduling-bridge",
    tags = ["manual"],
    version = "0.7.1",
    visibility = ["//visibility:public"],
)

# =============================================================================
# Runtime kit materialization (for Docker/Modal images)
#
# The runtime images copy the Bazel-resolved @tummycrypt/scheduling-kit into
# their node_modules. The kit is supplied ONLY from the Bzlmod module graph
# (@tummycrypt_scheduling_kit//:pkg, same source the build/test/pkg targets link
# via npm_link_package above) — never npm: it is a required peerDependency
# (^0.9.2) but npmjs is frozen at 0.8.0 and .npmrc keeps auto-install-peers=false,
# so the runtime `pnpm install --prod` never resolves it. Without this the
# container crashloops at boot with ERR_MODULE_NOT_FOUND. `pnpm build` syncs
# bazel-bin/kit_runtime -> ./kit (scripts/bazel-helpers.mjs syncDerivedKit); the
# Dockerfile/modal-app.py copy ./kit into node_modules/@tummycrypt/scheduling-kit.
copy_directory(
    name = "kit_runtime",
    src = "@tummycrypt_scheduling_kit//:pkg",
    out = "kit_runtime",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

# =============================================================================
# Tests
# =============================================================================

vitest_bin.vitest_test(
    name = "test",
    tags = ["manual"],
    data = [
        ":node_modules",
        "tsconfig.json",
        ":node_modules/vitest",
        ":node_modules/@tummycrypt/scheduling-kit",
        "vitest.config.ts",
    ] + glob([
        "src/**/*.ts",
        # Committed test fixtures (e.g. the recorded trace-conformance golden
        # traces under src/**/__fixtures__/) must be sandboxed alongside the suites.
        "src/**/__fixtures__/**/*.json",
        "tests/**/*.ts",
        "parity/**/*.ts",
        "bench/**/*.ts",
        "bench/**/*.js",
    ]),
    args = [
        "run",
        "--reporter=verbose",
        "--config",
        "$(rootpath vitest.config.ts)",
    ],
    log_level = "info",
    visibility = ["//visibility:public"],
)

# =============================================================================
# Typecheck
# =============================================================================

ts_project(
    name = "typecheck",
    srcs = glob(["src/**/*.ts"]),
    declaration = False,
    no_emit = True,
    tsconfig = ":tsconfig.json",
    transpiler = "tsc",
    validate = False,
    deps = [
        ":node_modules",
        ":node_modules/effect",
        ":node_modules/playwright-core",
        ":node_modules/pg",
        ":node_modules/@types/pg",
        ":node_modules/@tummycrypt/scheduling-kit",
    ],
    visibility = ["//visibility:public"],
)

# =============================================================================
# Exported files
# =============================================================================

exports_files(
    [
        "package.json",
        "tsconfig.json",
        "vitest.config.ts",
        "modal-app.py",
    ],
    visibility = ["//visibility:public"],
)
